Null and undefined

--- a/01-bases/index.html
+++ b/01-bases/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./types/numbers.js"></script>
+    <script src="./types/null-undefined.js"></script>
 </body>
 
 </html>
