--- a/01-bases/index.html
+++ b/01-bases/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./functions/function-type.js"></script>
+    <script src="./objects/excercise.js"></script>
 </body>
 
 </html>
